shell/y.output
Grammar

    0 $accept: commands $end

    1 commands: %empty
    2         | commands command

    3 command: bye
    4        | setenv
    5        | unsetenv
    6        | printenv
    7        | cd
    8        | cd_no_args
    9        | alias
   10        | unalias
   11        | alias_no_args
   12        | ls
   13        | test

   14 bye: BYE

   15 setenv: SETENV WORD WORD

   16 unsetenv: UNSETENV

   17 printenv: PRINTENV

   18 cd: CD WORD

   19 cd_no_args: CD

   20 alias: ALIAS WORD WORD

   21 unalias: UNALIAS WORD

   22 alias_no_args: ALIAS

   23 ls: LS

   24 test: TEST WORD


Terminals, with rules where they appear

$end (0) 0
error (256)
BYE (258) 14
SETENV (259) 15
UNSETENV (260) 16
PRINTENV (261) 17
CD (262) 18 19
TEST (263) 24
ALIAS (264) 20 22
UNALIAS (265) 21
LS (266) 23
WORD (267) 15 18 20 21 24


Nonterminals, with rules where they appear

$accept (13)
    on left: 0
commands (14)
    on left: 1 2, on right: 0 2
command (15)
    on left: 3 4 5 6 7 8 9 10 11 12 13, on right: 2
bye (16)
    on left: 14, on right: 3
setenv (17)
    on left: 15, on right: 4
unsetenv (18)
    on left: 16, on right: 5
printenv (19)
    on left: 17, on right: 6
cd (20)
    on left: 18, on right: 7
cd_no_args (21)
    on left: 19, on right: 8
alias (22)
    on left: 20, on right: 9
unalias (23)
    on left: 21, on right: 10
alias_no_args (24)
    on left: 22, on right: 11
ls (25)
    on left: 23, on right: 12
test (26)
    on left: 24, on right: 13


State 0

    0 $accept: . commands $end

    $default  reduce using rule 1 (commands)

    commands  go to state 1


State 1

    0 $accept: commands . $end
    2 commands: commands . command

    $end      shift, and go to state 2
    BYE       shift, and go to state 3
    SETENV    shift, and go to state 4
    UNSETENV  shift, and go to state 5
    PRINTENV  shift, and go to state 6
    CD        shift, and go to state 7
    TEST      shift, and go to state 8
    ALIAS     shift, and go to state 9
    UNALIAS   shift, and go to state 10
    LS        shift, and go to state 11

    command        go to state 12
    bye            go to state 13
    setenv         go to state 14
    unsetenv       go to state 15
    printenv       go to state 16
    cd             go to state 17
    cd_no_args     go to state 18
    alias          go to state 19
    unalias        go to state 20
    alias_no_args  go to state 21
    ls             go to state 22
    test           go to state 23


State 2

    0 $accept: commands $end .

    $default  accept


State 3

   14 bye: BYE .

    $default  reduce using rule 14 (bye)


State 4

   15 setenv: SETENV . WORD WORD

    WORD  shift, and go to state 24


State 5

   16 unsetenv: UNSETENV .

    $default  reduce using rule 16 (unsetenv)


State 6

   17 printenv: PRINTENV .

    $default  reduce using rule 17 (printenv)


State 7

   18 cd: CD . WORD
   19 cd_no_args: CD .

    WORD  shift, and go to state 25

    $default  reduce using rule 19 (cd_no_args)


State 8

   24 test: TEST . WORD

    WORD  shift, and go to state 26


State 9

   20 alias: ALIAS . WORD WORD
   22 alias_no_args: ALIAS .

    WORD  shift, and go to state 27

    $default  reduce using rule 22 (alias_no_args)


State 10

   21 unalias: UNALIAS . WORD

    WORD  shift, and go to state 28


State 11

   23 ls: LS .

    $default  reduce using rule 23 (ls)


State 12

    2 commands: commands command .

    $default  reduce using rule 2 (commands)


State 13

    3 command: bye .

    $default  reduce using rule 3 (command)


State 14

    4 command: setenv .

    $default  reduce using rule 4 (command)


State 15

    5 command: unsetenv .

    $default  reduce using rule 5 (command)


State 16

    6 command: printenv .

    $default  reduce using rule 6 (command)


State 17

    7 command: cd .

    $default  reduce using rule 7 (command)


State 18

    8 command: cd_no_args .

    $default  reduce using rule 8 (command)


State 19

    9 command: alias .

    $default  reduce using rule 9 (command)


State 20

   10 command: unalias .

    $default  reduce using rule 10 (command)


State 21

   11 command: alias_no_args .

    $default  reduce using rule 11 (command)


State 22

   12 command: ls .

    $default  reduce using rule 12 (command)


State 23

   13 command: test .

    $default  reduce using rule 13 (command)


State 24

   15 setenv: SETENV WORD . WORD

    WORD  shift, and go to state 29


State 25

   18 cd: CD WORD .

    $default  reduce using rule 18 (cd)


State 26

   24 test: TEST WORD .

    $default  reduce using rule 24 (test)


State 27

   20 alias: ALIAS WORD . WORD

    WORD  shift, and go to state 30


State 28

   21 unalias: UNALIAS WORD .

    $default  reduce using rule 21 (unalias)


State 29

   15 setenv: SETENV WORD WORD .

    $default  reduce using rule 15 (setenv)


State 30

   20 alias: ALIAS WORD WORD .

    $default  reduce using rule 20 (alias)
